--- a/index.html
+++ b/index.html
@@ -16,8 +16,23 @@
         <div class="nav Bx">
             <div class="nav-box Cn Bx Al Fr Fwh">
                 <div class="nav-items Al Bx Fr"> 
-                    <div class="logo Al Cn Bx Fc sh">
-                        <img style="border-radius: 50%;" src="public/images/logo.jpg">
+                    <div class="Bx">
+                        <div class="Il Bx BrI">
+                            <a class="Aic BrI Hw Ibh" href="#">
+                                <div class="Hw Al Bx Fr Jc BrI">
+                                    <div class="logb Jc Al Bx Fr BrI">
+                                        <div class="logb BrI Pr">
+                                            <div class="Inb Pr BrI">
+                                                <div class="Im Pr Bx">
+                                                    <img class="icoIm" importance="auto" loading="auto" src="public/images/logo.jpg">
+                                                </div>
+                                                <div class="Pr BrI Inb"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>  
+                            </a>
+                        </div>
                     </div>
                     <div class="nav-box-text Bx sh">
                         <a class="Rd-a">
@@ -68,14 +83,43 @@
                             </div>
                         </div>
                     </div>
-                    <div class="logo Al Cn Bx Fc sh">
-                        <img style="border-radius: 50%;" src="public/images/logo.jpg">
+                    <div class="Bx">
+                        <div class="Il Bx BrI">
+                            <a class="Aic BrI Hw Ibh" href="#">
+                                <div class="Hw Al Bx Fr Jc BrI">
+                                    <div class="Ilb Jc Al Bx Fr BrI">
+                                        <div class="In Bx BrI Pr">
+                                            <div class="Inb Pr BrI">
+                                                <div class="Im Pr Bx">
+                                                    <img class="icoIm" importance="auto" loading="auto" src="public/images/logo.jpg">
+                                                </div>
+                                                <div class="Pr BrI Inb"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>  
+                            </a>
+                        </div>
                     </div>
-                </div>
+                    <div class="Bx">
+                        <button class="btnD Cp" type="button">
+                            <div class="BbtnD Jc Al BrI bhF">
+                                <svg class="svbD" height="12" width="12" viewBox="0 0 24 24" aria-hidden="true" role="img">
+                                    <path d="M12 19.5L.66 
+                                    8.29c-.88-.86-.88-2.27 
+                                    0-3.14.88-.87 2.3-.87 3.18 
+                                    0L12 13.21l8.16-8.06c.88-.87 
+                                    2.3-.87 3.18 0 .88.87.88 
+                                    2.28 0 3.14L12 19.5z"></path>
+                                </svg>
+                            </div>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
 </header>
 </body>
 </html>
