installing React for start

--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="public/styles/styles.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alata">
         <title>Pinterest</title>
     </head>
 <body>
 <header>
     <div class="box-header Bx">
-        <div class="message">
-
-        </div>
         <div class="nav Bx">
             <div class="nav-box Cn Bx Al Fr Fwh">
                 <div class="nav-items Al Bx Fr"> 
@@ -78,7 +76,26 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                    <div class="Drow-filters">
+                                        <div class="Drow-box Bx">
+                                            <div class="Drow-fl">
+                                                <div class="Bx" style="width: 100%; color: #fff;">
+                                                    <div style="border-radius: 0;">
+                                                        <div class="Bx Cp" style="overflow: hidden;">
+                                                        <div class="Drow-box-text Bx Cp">
+                                                            <div class="Dbt Bx Cn Fr Fwh">
+                                                                <div class="Db-text Cp">
+                                                                    All Pins
+                                                                </div>
+                                                                <div class="Al Bx Fr Cp"></div>
+                                                            </div>
+                                                        </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -119,6 +136,7 @@
             </div>
         </div>
     </div>
+</div>
 </div>
 </header>
 </body>
